--- a/index.html
+++ b/index.html
@@ -53,5 +53,12 @@
       <li>Stampare i dati in console in un messaggio ben formattato.</li>
       <li>Testa la funzione con la query "london"</li>
     </ul>
+    <h2><b>🎯 Bonus 1 - Risultato vuoto</b></h2>
+    <p>
+      <b>Se l’array di ricerca è vuoto</b> , invece di far fallire l'intera
+      funzione, semplicemente i dati relativi a quella chiamata verranno settati
+      a null e la frase relativa non viene stampata. Testa la funzione con la
+      query “vienna” (non trova il meteo).
+    </p>
   </body>
 </html>
