--- a/index.html
+++ b/index.html
@@ -60,5 +60,25 @@
       a null e la frase relativa non viene stampata. Testa la funzione con la
       query “vienna” (non trova il meteo).
     </p>
+    <h2><b>🎯 Bonus 2 - Chiamate fallite</b></h2>
+    <p>
+      Attualmente, se una delle chiamate fallisce, **Promise.all()** rigetta
+      l'intera operazione.
+    </p>
+    <ul>
+      Modifica `getDashboardData()` per usare **Promise.allSettled()**, in modo
+      che:
+      <li>
+        <b>Se una chiamata fallisce,</b>
+        i dati relativi a quella chiamata verranno settati a null.
+      </li>
+      <li>
+        Stampa in console un messaggio di errore per ogni richiesta fallita.
+      </li>
+      <li>
+        Testa la funzione con un link fittizio per il meteo (es.
+        https://www.meteofittizio.it).
+      </li>
+    </ul>
   </body>
 </html>
